<resources>
    <string name="app_name">MyEconomy</string>
    <string name="home">Home</string>
    <string name="despesa">Despesa</string>
    <string name="receita">Receita</string>
    <string name="descri_o">Descrição</string>
    <string name="data">Data</string>
    <string name="enviar">Enviar</string>
    <string name="valor">Valor</string>
    <string name="desc">Descrição:</string>
    <string name="tipo">Tipo:</string>
    <string name="val">Valor:</string>
    <string name="dt">Data:</string>
</resources>